<resources>
    <string name="app_name">Android_mvvm_best_practices</string>
    <string name="title_activity_splash">SplashActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>


    <!-- Resources for Bank2LogInActivity -->
    <string name="don_t_have_an_account_sign_up">Don\'t have an account? Sign Up</string>
    <string name="welcom_back_log_in_to_continue_with_ronnystudio_ui_for_android">Welcome back. Log in to continue </string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="splash_image">Splash image</string>
    <string name="login">Login</string>
    <string name="recipe_title_preview">this is the recipe name</string>
    <string name="recipe">Recipes</string>
    <string name="no_internet">Please check your internet connection</string>
    <string name="network_error">Network error, could get data,please try again!</string>
    <string name="refresh">refresh</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_recipes">Recipes</string>
    <string name="title_activity_recipe_details">Recipe Details</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >4 characters</string>
    <string name="invalid_username_and_password">please check your username and password</string>
    <string name="add_to_favorite">Add to favorite</string>
    <string name="test_password">ahmed</string>
    <string name="test_email">ahmed@ahmed.ahmed</string>
    <string name="search_error"> there is no such recipe name </string>
    <string name="loading">Loading</string>
    <string name="lori_johnson_gmail_com">lori.johnson@gmail.com</string>
    <string name="already_have_an_account">Already have an account, login</string>
    <string name="register">Register</string>
    <string name="username">Username</string>
    <string name="register_to_continue">Please register to continue</string>
    <string name="user_role">User</string>
    <string name="roles">Roles</string>
    <string name="admin_role">Admin</string>
    <string name="moderator_role">Moderator</string>
    <string name="devops_role">Devops</string>

    <string-array name="roles">
        <item>User</item>
        <item>Admin</item>
        <item>Moderator</item>
        <item>Devops</item>

    </string-array>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="movies">Movies</string>
    <string name="about">About</string>
    <string name="logout">Logout</string>
    <string name="password">Password</string>
    <string name="email_address">Email Address</string>
    <string name="add_movie">Add movie</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>