<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="registerViewModel"
            type="com.example.android_mvvm_best_pratices.presentation.register.RegisterViewModel" />

        <import type="com.example.android_mvvm_best_pratices.data.Resource" />

        <import type="android.view.View" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <Button
                android:id="@+id/button_two_button"
                android:layout_width="295dp"
                android:layout_height="46dp"
                android:layout_marginTop="28dp"
                android:background="@drawable/bank2_log_in_activity_button_two_button_ripple"
                android:fontFamily="@font/font_opensans_semibold"
                android:gravity="center"
                android:onClick="@{(view)->registerViewModel.doRegister()}"
                android:text="@string/register"
                android:textColor="#FFFFFF"
                android:textSize="13sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/inputs_constraint_layout"
                tools:layout_editor_absoluteX="40dp"
                tools:layout_editor_absoluteY="336dp" />

            <Button
                android:id="@+id/don_thave_an_accoun_button"
                android:layout_width="193dp"
                android:layout_height="20dp"
                android:layout_marginTop="16dp"
                android:background="?attr/selectableItemBackground"
                android:gravity="center"
                android:text="@string/already_have_an_account"
                android:textColor="#454C66"
                android:textSize="13sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/info_text"
                tools:layout_editor_absoluteX="91dp"
                tools:layout_editor_absoluteY="440dp" />


            <TextView
                android:id="@+id/welcom_back_log_in_text_view"
                android:layout_width="295dp"
                android:layout_height="wrap_content"

                android:layout_marginTop="8dp"
                android:fontFamily="@font/font_opensans_light"
                android:gravity="start"
                android:lineSpacingMultiplier="1.5"
                android:text="@string/register_to_continue"
                android:textColor="#19224C"
                android:textSize="20sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"

                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/inputs_constraint_layout"
                android:layout_width="295dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/welcom_back_log_in_text_view"
                tools:layout_editor_absoluteX="40dp"
                tools:layout_editor_absoluteY="123dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/username_layout"
                    android:layout_width="0dp"
                    android:layout_height="77dp"
                    app:layout_constraintHorizontal_weight="1"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:layout_editor_absoluteX="0dp"
                    tools:layout_editor_absoluteY="0dp">

                    <TextView
                        android:id="@+id/username"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="-1dp"
                        android:alpha="0.64"
                        android:gravity="start"
                        android:lineSpacingMultiplier="1.25"
                        android:text="@string/username"
                        android:textColor="#454C66"
                        android:textSize="13sp"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:layout_editor_absoluteX="0dp"
                        tools:layout_editor_absoluteY="-2dp" />

                    <View
                        android:layout_width="0dp"
                        android:layout_height="50dp"
                        android:layout_marginTop="9dp"
                        android:background="#F5F6F6"
                        app:layout_constraintHorizontal_weight="1"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/username"
                        tools:layout_editor_absoluteX="0dp"
                        tools:layout_editor_absoluteY="27dp" />

                    <EditText
                        android:layout_width="260dp"
                        android:layout_height="18dp"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="23dp"
                        android:layout_marginEnd="20dp"
                        android:background="#00000000"
                        android:gravity="start|center_vertical"
                        android:hint="@string/username"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:text="@={registerViewModel.registerRequest.username}"
                        android:textColor="#19224C"
                        android:textColorHint="#D0D1D5"
                        android:textSize="15sp"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/username"
                        tools:layout_editor_absoluteX="20dp"
                        tools:layout_editor_absoluteY="41dp" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/mail_layout"
                    android:layout_width="0dp"
                    android:layout_height="77dp"
                    app:layout_constraintHorizontal_weight="1"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/username_layout"
                    tools:layout_editor_absoluteX="0dp"
                    tools:layout_editor_absoluteY="0dp">

                    <TextView
                        android:id="@+id/email_address_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="-1dp"
                        android:alpha="0.64"
                        android:gravity="start"
                        android:lineSpacingMultiplier="1.25"
                        android:text="@string/email_address"
                        android:textColor="#454C66"
                        android:textSize="13sp"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:layout_editor_absoluteX="0dp"
                        tools:layout_editor_absoluteY="-2dp" />

                    <View
                        android:layout_width="0dp"
                        android:layout_height="50dp"
                        android:layout_marginTop="9dp"
                        android:background="#F5F6F6"
                        app:layout_constraintHorizontal_weight="1"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/email_address_text_view"
                        tools:layout_editor_absoluteX="0dp"
                        tools:layout_editor_absoluteY="27dp" />

                    <EditText
                        android:layout_width="260dp"
                        android:layout_height="18dp"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="23dp"
                        android:background="#00000000"
                        android:gravity="start|center_vertical"
                        android:hint="@string/lori_johnson_gmail_com"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:text="@={registerViewModel.registerRequest.email}"
                        android:textColor="#19224C"
                        android:textColorHint="#D0D1D5"
                        android:textSize="15sp"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/email_address_text_view"
                        tools:layout_editor_absoluteX="20dp"
                        tools:layout_editor_absoluteY="41dp" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/password_layout"
                    android:layout_width="0dp"
                    android:layout_height="77dp"
                    app:layout_constraintHorizontal_weight="1"

                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/mail_layout"
                    tools:layout_editor_absoluteX="0dp"
                    tools:layout_editor_absoluteY="96dp">

                    <TextView
                        android:id="@+id/password_text_view"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="-1dp"
                        android:alpha="0.64"
                        android:gravity="start"
                        android:lineSpacingMultiplier="1.25"
                        android:text="@string/password"
                        android:textColor="#454C66"
                        android:textSize="13sp"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:layout_editor_absoluteX="0dp"
                        tools:layout_editor_absoluteY="-2dp" />

                    <View
                        android:id="@+id/password_view"
                        android:layout_width="0dp"
                        android:layout_height="50dp"
                        android:layout_marginTop="9dp"
                        android:background="#F5F6F6"
                        app:layout_constraintHorizontal_weight="1"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/password_text_view"
                        tools:layout_editor_absoluteX="0dp"
                        tools:layout_editor_absoluteY="27dp" />


                    <EditText
                        android:layout_width="246dp"
                        android:layout_height="19dp"
                        android:layout_marginStart="19dp"
                        android:layout_marginTop="23dp"
                        android:background="#00000000"
                        android:gravity="start|center_vertical"
                        android:inputType="text"
                        android:maxLines="1"
                        android:text="@={registerViewModel.registerRequest.password}"
                        android:textColor="#000000"
                        android:textSize="12sp"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/password_text_view"
                        tools:layout_editor_absoluteX="19dp"
                        tools:layout_editor_absoluteY="48dp" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <TextView
                    android:id="@+id/roles_label"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/roles"
                    android:theme="@style/SpinnerTheme"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/password_layout" />

                <CheckBox
                    android:id="@+id/user_role"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:onCheckedChanged="@{registerViewModel.checkBoxCheckedStateListener}"
                    android:text="@string/user_role"
                    android:theme="@style/SpinnerTheme"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/roles_label" />

                <CheckBox
                    android:id="@+id/admin_role"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:onCheckedChanged="@{registerViewModel.checkBoxCheckedStateListener}"
                    android:text="@string/admin_role"
                    android:theme="@style/SpinnerTheme"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/user_role" />

                <CheckBox
                    android:id="@+id/moderator_role"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:onCheckedChanged="@{registerViewModel.checkBoxCheckedStateListener}"
                    android:text="@string/moderator_role"
                    android:theme="@style/SpinnerTheme"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/admin_role" />

                <CheckBox
                    android:id="@+id/devops_role"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:onCheckedChanged="@{registerViewModel.checkBoxCheckedStateListener}"
                    android:text="@string/devops_role"
                    android:theme="@style/SpinnerTheme"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/moderator_role" />
            </androidx.constraintlayout.widget.ConstraintLayout>


            <TextView
                android:id="@+id/info_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/font_opensans_light"
                android:text="@{registerViewModel.registerStatus.message}"
                android:textColor="@{registerViewModel.registerStatus instanceof Resource.Success?@color/green:@color/red}"
                android:textStyle="bold"

                app:layout_constraintEnd_toEndOf="@+id/button_two_button"
                app:layout_constraintStart_toStartOf="@+id/button_two_button"
                app:layout_constraintTop_toBottomOf="@+id/button_two_button" />

            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="@{registerViewModel.registerStatus instanceof Resource.Loading?View.VISIBLE:View.INVISIBLE}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</layout>

