<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="loginViewModel"
            type="com.example.android_mvvm_best_pratices.ui.component.authentication.fragment.register.RegisterViewModel" />
    </data>


                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">


                    <Button
                        android:id="@+id/button_two_button"
                        android:layout_width="295dp"
                        android:layout_height="46dp"
                        android:layout_marginTop="40dp"
                        android:background="@drawable/bank2_log_in_activity_button_two_button_ripple"
                        android:fontFamily="@font/font_opensans_semibold"
                        android:gravity="center"
                        android:text="Login"
                        android:textColor="#FFFFFF"
                        android:textSize="13sp"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/inputs_constraint_layout"
                        tools:layout_editor_absoluteX="40dp"
                        tools:layout_editor_absoluteY="336dp" />

                    <Button
                        android:id="@+id/don_thave_an_accoun_button"
                        android:layout_width="193dp"
                        android:layout_height="20dp"
                        android:layout_marginTop="58dp"
                        android:background="?attr/selectableItemBackground"
                        android:gravity="center"
                        android:text="@string/don_t_have_an_account_sign_up"
                        android:textColor="#454C66"
                        android:textSize="13sp"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/button_two_button"
                        tools:layout_editor_absoluteX="91dp"
                        tools:layout_editor_absoluteY="440dp" />

                    <TextView
                        android:id="@+id/welcom_back_log_in_text_view"
                        android:layout_width="295dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="26dp"
                        android:fontFamily="@font/font_opensans_light"
                        android:gravity="start"
                        android:lineSpacingMultiplier="1.5"
                        android:text="@string/welcom_back_log_in_to_continue_with_ronnystudio_ui_for_android"
                        android:textColor="#19224C"
                        android:textSize="20sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"

                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintVertical_bias="0.07999998" />

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/inputs_constraint_layout"
                        android:layout_width="295dp"
                        android:layout_height="173dp"
                        android:layout_marginTop="68dp"
                        app:layout_constraintLeft_toLeftOf="parent"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/welcom_back_log_in_text_view"
                        tools:layout_editor_absoluteX="40dp"
                        tools:layout_editor_absoluteY="123dp">

                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:layout_width="0dp"
                            android:layout_height="77dp"
                            app:layout_constraintHorizontal_weight="1"
                            app:layout_constraintLeft_toLeftOf="parent"
                            app:layout_constraintRight_toRightOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            tools:layout_editor_absoluteX="0dp"
                            tools:layout_editor_absoluteY="0dp">

                            <TextView
                                android:id="@+id/email_address_text_view"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="-1dp"
                                android:alpha="0.64"
                                android:gravity="start"
                                android:lineSpacingMultiplier="1.25"
                                android:text="Email Address"
                                android:textColor="#454C66"
                                android:textSize="13sp"
                                app:layout_constraintLeft_toLeftOf="parent"
                                app:layout_constraintTop_toTopOf="parent"
                                tools:layout_editor_absoluteX="0dp"
                                tools:layout_editor_absoluteY="-2dp" />

                            <View
                                android:layout_width="0dp"
                                android:layout_height="50dp"
                                android:layout_marginTop="9dp"
                                android:background="#F5F6F6"
                                app:layout_constraintHorizontal_weight="1"
                                app:layout_constraintLeft_toLeftOf="parent"
                                app:layout_constraintRight_toRightOf="parent"
                                app:layout_constraintTop_toBottomOf="@+id/email_address_text_view"
                                tools:layout_editor_absoluteX="0dp"
                                tools:layout_editor_absoluteY="27dp" />

                            <EditText
                                android:layout_width="260dp"
                                android:layout_height="18dp"
                                android:layout_marginStart="20dp"
                                android:layout_marginLeft="20dp"
                                android:layout_marginTop="23dp"
                                android:background="#00000000"
                                android:gravity="start|center_vertical"
                                android:hint="@string/lori_johnson_gmail_com"
                                android:inputType="textEmailAddress"
                                android:maxLines="1"
                                android:text="@={loginViewModel.registerRequest.username}"
                                android:textColor="#19224C"
                                android:textColorHint="#D0D1D5"
                                android:textSize="15sp"
                                app:layout_constraintLeft_toLeftOf="parent"
                                app:layout_constraintTop_toBottomOf="@+id/email_address_text_view"
                                tools:layout_editor_absoluteX="20dp"
                                tools:layout_editor_absoluteY="41dp" />
                        </androidx.constraintlayout.widget.ConstraintLayout>

                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:layout_width="0dp"
                            android:layout_height="77dp"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintHorizontal_weight="1"
                            app:layout_constraintLeft_toLeftOf="parent"
                            app:layout_constraintRight_toRightOf="parent"
                            tools:layout_editor_absoluteX="0dp"
                            tools:layout_editor_absoluteY="96dp">

                            <TextView
                                android:id="@+id/password_text_view"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="-1dp"
                                android:alpha="0.64"
                                android:gravity="start"
                                android:lineSpacingMultiplier="1.25"
                                android:text="Password"
                                android:textColor="#454C66"
                                android:textSize="13sp"
                                app:layout_constraintLeft_toLeftOf="parent"
                                app:layout_constraintTop_toTopOf="parent"
                                tools:layout_editor_absoluteX="0dp"
                                tools:layout_editor_absoluteY="-2dp" />

                            <View
                                android:layout_width="0dp"
                                android:layout_height="50dp"
                                android:layout_marginTop="9dp"
                                android:background="#F5F6F6"
                                app:layout_constraintHorizontal_weight="1"
                                app:layout_constraintLeft_toLeftOf="parent"
                                app:layout_constraintRight_toRightOf="parent"
                                app:layout_constraintTop_toBottomOf="@+id/password_text_view"
                                tools:layout_editor_absoluteX="0dp"
                                tools:layout_editor_absoluteY="27dp" />

                            <EditText
                                android:layout_width="246dp"
                                android:layout_height="19dp"
                                android:layout_marginStart="19dp"
                                android:layout_marginLeft="19dp"
                                android:layout_marginTop="23dp"
                                android:background="#00000000"
                                android:gravity="start|center_vertical"
                                android:inputType="text"
                                android:maxLines="1"
                                android:text="@={loginViewModel.registerRequest.password}"
                                android:textColor="#000000"
                                android:textSize="12sp"
                                app:layout_constraintLeft_toLeftOf="parent"
                                app:layout_constraintTop_toBottomOf="@+id/password_text_view"
                                tools:layout_editor_absoluteX="19dp"
                                tools:layout_editor_absoluteY="48dp" />
                        </androidx.constraintlayout.widget.ConstraintLayout>
                    </androidx.constraintlayout.widget.ConstraintLayout>
                </androidx.constraintlayout.widget.ConstraintLayout>


</layout>